# agentic-feature-slice-templates

./: .gitignore  README.md  SKILL.md
examples/agentic-rust-service-bootstrap/: .env.example  AGENTS.md  Cargo.toml  README.md
examples/agentic-rust-service-bootstrap/src/: lib.rs  main.rs
examples/agentic-rust-service-bootstrap/tests/: health_smoke.rs
examples/banking/: .env.example  .gitignore  AGENTS.md  Cargo.toml  PROMPTS.md  README.md
examples/banking/.agents/skills/factstore-usage/: SKILL.md
examples/banking/.agents/skills/feature-slice-rust/: SKILL.md
examples/banking/specs/: open_account.md
examples/banking/src/: lib.rs  main.rs
examples/banking/src/features/: mod.rs
examples/banking/src/features/open_account/: append_fact.rs  http_handler.rs  mod.rs  request.rs  response.rs
examples/banking/tests/: health_smoke.rs  open_account_http.rs
templates/rust/skills/feature-slice/: SKILL.md
templates/rust/skills/project-bootstrap/: README.md  SKILL.md
